--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     .btn-eliminar {
       color: white;
-      background: #ff3333;
+      background: red;
       border: none;
       font-size: 16px;
       cursor: pointer;
