--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
   </div>
 
   <footer>
-    Creada por Dylan Tirado y Angie Martinez
+    Creada por Dylan Tirado, Ismael Cadena, Angie Martinez y Deimar Chaverra
   </footer>
 
   <script>
